# mockhaus

./: .dockerignore  .gitignore  CHANGELOG.md  COPY_COMMAND.md  Dockerfile  LICENSE  Makefile  QUERY_HISTORY.md  README.md  docker-compose.yml  mockhaus.config.example.json  pyproject.toml  pyrightconfig.json  test_input.py
.claude/: CLAUDE.md
client/: README.md  __init__.py  enhanced_repl.py  repl.py
docs/: COPY_INTO_GUIDE.md  CSV_FORMAT_MAPPING.md  MILESTONE_0_FINDINGS.md  PARQUET_FORMAT_MAPPING.md  SYSTEM_DESIGN.md  in_memory_server_plan.md  query_history_design.md  rahul_notes.md  snowflake_custom_dialect_plan.md
docs/archive/: AST_PARSING_PROGRESS.md  CLIENT_OPTIONS.md  CSV_IMPLEMENTATION_PLAN.md  DATA_INGESTION_PLAN.md  MIGRATION_GUIDE.md  MOCKHAUS_PLAN.md  PARQUET_IMPLEMENTATION_PLAN.md  PHASE_1_TODO.md  PROJECT_ROADMAP.md  REPL_ENHANCEMENT_PLAN.md  SERVER_ARCHITECTURE.md  mode_comparison.md  query_history_advantages.md  query_history_management_plan.md  rahul_notes.md
plans/: snowflake-rest-api-proxy-plan.md  statement-handle-storage.md  system_design.md
scripts/: run_integration_tests.py
src/mockhaus/: __init__.py  banner.py  cli.py  config.py  copy_into.py  executor.py  file_formats.py  my_logging.py
src/mockhaus/query_history/: __init__.py  history.py
src/mockhaus/repl/: README.md  __init__.py  enhanced_repl.py  repl.py
src/mockhaus/server/: __init__.py  app.py  concurrent_session_manager.py  dependencies.py  session.py  session_context.py  state.py
src/mockhaus/server/middleware/: __init__.py  cors.py  debug_logging.py  logging.py
src/mockhaus/server/models/: __init__.py  request.py  response.py  session.py
src/mockhaus/server/routes/: __init__.py  health.py  query.py  sessions.py
src/mockhaus/server/snowflake_api/: async_executor.py  models.py  result_mapper.py  routes.py  statement_manager.py
src/mockhaus/server/storage/: __init__.py  base.py  local.py
src/mockhaus/snowflake/: __init__.py  ast_parser.py  copy_into.py  database_manager.py  file_formats.py  ingestion.py  stages.py  translator.py
src/mockhaus/snowflake/file_formats/: __init__.py  base.py  csv.py  json.py  manager.py  parquet.py  registry.py
src/mockhaus/sqlglot/: __init__.py
src/mockhaus/sqlglot/dialects/: __init__.py  custom_duckdb.py  custom_snowflake.py  expressions.py
tests/: __init__.py  conftest.py  test_ast_parser.py  test_config.py  test_configurable_parsing.py  test_data_ingestion.py  test_example.py  test_in_memory_server.py  test_query_history.py  test_server_persistence.py
tests/e2e/: __init__.py  conftest.py  test_data_pipeline_merge_workflow.py
tests/e2e/fixtures/data_pipeline/: customer_incremental_data.csv  customer_initial_data.csv
tests/e2e/sql/: data_pipeline_merge_workflow.sql
tests/fixtures/expected_results/: expected_translations.py
tests/fixtures/parquet/: README.md  basic_brotli.parquet  basic_gzip.parquet  basic_lz4.parquet  basic_none.parquet  basic_snappy.parquet  basic_zstd.parquet  generate_test_files.py  test_files_info.json  with_binary_brotli.parquet  with_binary_gzip.parquet  with_binary_lz4.parquet  with_binary_none.parquet  with_binary_snappy.parquet  with_binary_zstd.parquet  with_nulls_brotli.parquet  with_nulls_gzip.parquet  with_nulls_lz4.parquet  with_nulls_none.parquet  with_nulls_snappy.parquet  with_nulls_zstd.parquet
tests/fixtures/snowflake_queries/: sample_queries.sql
tests/integration/: test_enhanced_csv_copy_into.py  test_parquet_copy_into_real.py  test_server_integration.py  test_snowflake_features.py  test_snowflake_to_duckdb.py
tests/server/: __init__.py  test_health.py  test_query.py  test_sessions.py
tests/unit/: test_executor_databases.py  test_executor_with_history.py  test_query_history.py
tests/unit/parsing/: test_configurable_parsing.py
tests/unit/server/snowflake_api/: test_models.py  test_routes.py  test_statement_manager.py
tests/unit/snowflake/: test_ast_parser.py  test_ingestion.py  test_queries.py  test_translator.py
tests/unit/snowflake/file_formats/: test_csv_handler.py  test_parquet_handler.py
tests/unit/sqlglot/dialects/: test_custom_duckdb.py  test_custom_snowflake.py
