[project]
name = "mockhaus"
version = "0.1.0"
description = "Snowflake proxy with DuckDB - SQL translation and execution engine for local development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb==1.4.0.dev159",
  "sqlglot>=19.0.2",
  "click>=8.1.0",
  "rich>=13.0.0",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.5.0",
  "python-multipart>=0.0.6",
  "requests>=2.31.0",
  "prompt-toolkit>=3.0.0",
  "pandas>=2.3.1",
  "pyarrow>=21.0.0",
]

[project.scripts]
mockhaus = "mockhaus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=8.4.1",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.12.7",
  "mypy>=1.17.1",
  "pyright>=1.1.403",
  "httpx>=0.25.0",
  "types-requests>=2.32.4.20250611",
]

[tool.ruff]
line-length = 150
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "T20", # flake8-print
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "ARG", # flake8-unused-arguments
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow running",
    "e2e: marks tests as end-to-end tests (may be slow)",
    "data_pipeline: marks tests as data pipeline E2E tests",
]
